--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
   "locals": {
     "url": "http://localhost:8080",
-    "name": "The Wintersmith's blog",
-    "owner": "Someone",
+    "name": "Uniekezaak Styleguide",
+    "owner": "Els Schipper & Reinier Sierag",
     "description": "Ramblings of an immor(t)al demigod"
   },
   "output": "app",
