--- a/config.json
+++ b/config.json
@@ -7,7 +7,8 @@
   },
   "output": "app",
   "plugins": [
-    "./plugins/paginator.coffee"
+    "./plugins/paginator.coffee",
+    "wintersmith-livereload"
   ],
   "require": {
     "moment": "moment",
